docs: tidy up DESCRIPTION and README

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,20 @@
 Package: rwa
 Type: Package
-Title: Perform a Relative Weight Analysis
-Version: 0.1.0
+Title: Perform a Relative Weights Analysis
+Version: 0.0.1
 Author: Martin Chan <martinchan53@gmail.com>
 Maintainer: Martin Chan <martinchan53@gmail.com>
-Description: Perform a Relative Weight Analysis (RWA) as per the method specified 
-    in Tonidandel & LeBreton. In essence, RWA decomposes the total variance predicted
-    in a regression model into weights that accurately reflect the proportional contribution
-    of the predictor variables, which addresses the issue of multi-collinearity.
+Description: Perform a Relative Weights Analysis (RWA) as per the method described 
+    in Tonidandel & LeBreton (2015), and can be traced back to Johnson (2000). In essence, RWA decomposes
+    the total variance predicted in a regression model into weights that accurately reflect the proportional 
+    contribution of the predictor variables, which addresses the issue of multi-collinearity.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.0.2
+URL: https://github.com/martinctc/rwa
+BugReport: https://github.com/martinctc/rwa/issues
+RoxygenNote: 7.1.1
+Roxygen: list(markdown = TRUE)
 Imports:
 	dplyr,
 	magrittr,
