--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 URL: https://github.com/martinctc/rwa
-BugReport: https://github.com/martinctc/rwa/issues
+BugReports: https://github.com/martinctc/rwa/issues
 RoxygenNote: 7.1.1
 Roxygen: list(markdown = TRUE)
 Imports:
