docs: add DOI links to articles in DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.0.1
 Author: Martin Chan <martinchan53@gmail.com>
 Maintainer: Martin Chan <martinchan53@gmail.com>
 Description: Perform a Relative Weights Analysis (RWA) (a.k.a. Key Drivers Analysis) as per the method described 
-    in Tonidandel & LeBreton (2015), with its original roots in Johnson (2000). In essence, RWA decomposes
+    in Tonidandel & LeBreton (2015) <DOI:10.1007/s10869-014-9351-z>, with its original roots in Johnson (2000) <DOI:10.1207/S15327906MBR3501_1>. In essence, RWA decomposes
     the total variance predicted in a regression model into weights that accurately reflect the proportional 
     contribution of the predictor variables, which addresses the issue of multi-collinearity. In typical scenarios,
     RWA returns similar results to Shapley regression, but with a significant advantage on computational performance.
