feat: create rwa_logit

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(plot_rwa)
 export(remove_all_na_cols)
 export(rwa)
+export(rwa_logit)
 import(dplyr)
 import(ggplot2)
 importFrom(magrittr,"%>%")
