feat: create `rwa_multiregress()`
- `rwa_multiregress()` is created as a duplicate of the original `rwa()`.
- `rwa()` is used as a wrapper to call `rwa_multiregress()` and `rwa_logit()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(plot_rwa)
 export(remove_all_na_cols)
 export(rwa)
 export(rwa_logit)
+export(rwa_multiregress)
 import(dplyr)
 import(ggplot2)
 importFrom(magrittr,"%>%")
