--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,4 +18,7 @@ importFrom(dplyr,tibble)
 importFrom(magrittr,"%>%")
 importFrom(purrr,map_dfr)
 importFrom(stats,cor)
+importFrom(stats,rnorm)
 importFrom(tidyr,drop_na)
+importFrom(utils,head)
+importFrom(utils,tail)
