feat: enhance README and vignettes with comprehensive bootstrap confidence intervals documentation

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -2,3 +2,13 @@ template:
   params:
     bootswatch: cosmo
     ganalytics: UA-138721086-1
+
+articles:
+- title: "Getting Started"
+  navbar: ~
+  contents:
+  - introduction-to-rwa
+  
+- title: "Advanced Methods"
+  contents:
+  - bootstrap-confidence-intervals
