Add comprehensive unit tests with testthat
- Set up testthat infrastructure with proper configuration
- Add testthat to DESCRIPTION Suggests field with Config/testthat/edition: 3
- Create comprehensive tests for rwa() function:
  * Basic functionality and output structure validation
  * Sorting behavior testing (sort parameter)
  * Sign application testing (applysigns parameter)
  * Bootstrap confidence intervals testing
  * Edge cases (single predictor, missing data)
  * Input handling scenarios
  * Consistency and reproducibility checks
- Create tests for plot_rwa() function:
  * ggplot object creation validation
  * Plot structure and mapping verification
  * Sign application in plots
  * Label and aesthetic correctness
  * Edge case handling
  * Input validation
- Create bootstrap-specific tests:
  * Confidence interval reasonableness
  * Different confidence levels
  * Significance testing logic
  * Rescaled CI warnings
- Create helper function tests:
  * remove_all_na_cols() comprehensive testing
  * Data type preservation
  * Different NA type handling
- Create integration tests:
  * rwa() and plot_rwa() workflow testing
  * Real data examples (diamonds dataset)
  * Sorting consistency across functions
  * Bootstrap + plotting integration

Tests cover both happy path and edge cases while being realistic about
current function validation behavior. Includes appropriate CRAN skips
for computationally intensive bootstrap tests.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,5 +29,7 @@ Imports:
 	utils
 Suggests:
 	knitr,
-	rmarkdown
+	rmarkdown,
+	testthat (>= 3.0.0)
 VignetteBuilder: knitr
+Config/testthat/edition: 3
