fix: add rlang to Suggests in DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,6 +30,7 @@ Imports:
 Suggests:
 	knitr,
 	rmarkdown,
-	testthat (>= 3.0.0)
+	testthat (>= 3.0.0),
+	rlang
 VignetteBuilder: knitr
 Config/testthat/edition: 3
