fix: add spelling package to Suggests and implement spelling tests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,9 +28,11 @@ Imports:
 	purrr,
 	utils
 Suggests:
-	knitr,
-	rmarkdown,
-	testthat (>= 3.0.0),
-	rlang
+    knitr,
+    rmarkdown,
+    testthat (>= 3.0.0),
+    rlang,
+    spelling
 VignetteBuilder: knitr
 Config/testthat/edition: 3
+Language: en-US
