--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Description: Perform a Relative Weights Analysis (RWA) (a.k.a. Key Drivers Analy
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-URL: https://github.com/martinctc/rwa
+URL: https://martinctc.github.io/rwa/, https://github.com/martinctc/rwa
 BugReports: https://github.com/martinctc/rwa/issues
 RoxygenNote: 7.3.2
 Roxygen: list(markdown = TRUE)
