feat: enhance rwa function with input validation and error handling for conf_level, n_bootstrap, and variable types fix: add var import to NAMESPACE and update documentation test: add comprehensive tests for rwa function edge cases and error messages

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ importFrom(magrittr,"%>%")
 importFrom(purrr,map_dfr)
 importFrom(stats,cor)
 importFrom(stats,rnorm)
+importFrom(stats,var)
 importFrom(tidyr,drop_na)
 importFrom(utils,head)
 importFrom(utils,tail)
