--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -15,6 +15,8 @@ reference:
     desc: "Core functions for relative weights analysis"
     contents:
     - rwa
+    - rwa_multiregress
+    - rwa_logit
     - plot_rwa
   - title: "Utility Functions"
     desc: "Helper functions and utilities"
