feat: add vignette for regression methods including multiple and logistic RWA

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -30,5 +30,6 @@ articles:
   
 - title: "Advanced Methods"
   contents:
+  - regression-methods
   - bootstrap-confidence-intervals
   - evaluating-rwa-method-reference
