feat: add weight variable support and missing data handling to rwa functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,7 +21,9 @@ importFrom(magrittr,"%>%")
 importFrom(purrr,map_dfr)
 importFrom(stats,binomial)
 importFrom(stats,coef)
+importFrom(stats,complete.cases)
 importFrom(stats,cor)
+importFrom(stats,cov.wt)
 importFrom(stats,glm)
 importFrom(stats,lm)
 importFrom(stats,predict)
